questions added to quiz

--- a/index.html
+++ b/index.html
@@ -8,6 +8,241 @@
 </head>
 <body>
     <h1>General Knowledge <span>Quiz</span></h1>
+    <div class="main container">
+        <form class="form">
+            <div class="question-div">
+                <h2 class="question">
+                    What is the smallest planet in our solar system?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="Mars" name="Q1" value="a" checked>
+                        <label for="Mars">Mars</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Mercury" name="Q1" value="b">
+                        <label for="Mercury">Mercury</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Venus" name="Q1" value="c">
+                        <label for="Venus">Venus</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Pluto" name="Q1" value="d">
+                        <label for="Pluto">Pluto</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    How many hearts does an octopus have?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="1" name="Q2" value="a" checked>
+                        <label for="1">1</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="2" name="Q2" value="b">
+                        <label for="2">2</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="3" name="Q2" value="c">
+                        <label for="3">3</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="4" name="Q2" value="d">
+                        <label for="4">4</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    In which year did the Titanic sink?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="1902" name="Q3" value="a" checked>
+                        <label for="1902">1902</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="1912" name="Q3" value="b">
+                        <label for="1912">1912</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="1922" name="Q3" value="c">
+                        <label for="1922">1922</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="1932" name="Q3" value="d">
+                        <label for="1932">1932</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    How many bones are there in the human body?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="195" name="Q4" value="a" checked>
+                        <label for="195">195</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="206" name="Q4" value="b">
+                        <label for="206">206</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="213" name="Q4" value="c">
+                        <label for="213">213</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="226" name="Q4" value="d">
+                        <label for="226">226</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    In which sport would you perform a "slam dunk"?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="Volleyball" name="Q5" value="a" checked>
+                        <label for="Volleyball">Volleyball</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Tennis" name="Q5" value="b">
+                        <label for="Tennis">Tennis</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Rugby" name="Q5" value="c">
+                        <label for="Rugby">Rugby</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Basketball" name="Q5" value="d">
+                        <label for="Basketball">Basketball</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    What is the chemical symbol for gold?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="Ag" name="Q6" value="a" checked>
+                        <label for="Ag">Ag</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Go" name="Q6" value="b">
+                        <label for="Go">Go</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Au" name="Q6" value="c">
+                        <label for="Au">Au</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Gd" name="Q6" value="d">
+                        <label for="Gd">Gd</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                   Which country has the longest coastline in the world?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="Australia" name="Q7" value="a" checked>
+                        <label for="Australia">Australia</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Canada" name="Q7" value="b">
+                        <label for="Canada">Canada</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Russia" name="Q7" value="c">
+                        <label for="Russia">Russia</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Indonesia" name="Q7" value="d">
+                        <label for="Indonesia">Indonesia</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    Which fictional character is known for stealing from the rich to give to the poor?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="Zorro" name="Q8" value="a" checked>
+                        <label for="Zorro">Zorro</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="King Arthur" name="Q8" value="b">
+                        <label for="King Arthur">King Arthur</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Robin Hood" name="Q8" value="c">
+                        <label for="Robin Hood">Robin Hood</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Sherlock Holmes" name="Q8" value="d">
+                        <label for="Sherlock Holmes">Sherlock Holmes</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    Which country is known as the "Land of the Rising Sun"?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="China" name="Q9" value="a" checked>
+                        <label for="China">China</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Thailand" name="Q9" value="b">
+                        <label for="Thailand">Thailand</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="Japan" name="Q9" value="c">
+                        <label for="Japan">Japan</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="South Korea" name="Q9" value="d">
+                        <label for="South Korea">South Korea</label>
+                    </div>
+                </div>
+            </div>
+            <div class="question-div">
+                <h2 class="question">
+                    What is the rarest blood type?
+                </h2>
+                <div class ="answers">
+                    <div>
+                        <input type="radio" id="A+" name="Q10" value="a" checked>
+                        <label for="A+">A+</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="AB-" name="Q10" value="b">
+                        <label for="AB-">AB-</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="O+" name="Q10" value="c">
+                        <label for="O+">O+</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="B+" name="Q10" value="d">
+                        <label for="B+">B+</label>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
 
 </body>
 </html>
