--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                     </div>
                 </div>
             </div>
+            <button type="submit">VALIDER</button>
         </form>
     </div>
 
