--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </div>
                 </div>
             </div>
-            <button type="submit">VALIDER</button>
+            <button type="submit" class="submit-button">VALIDER</button>
         </form>
     </div>
 
