--- a/index.html
+++ b/index.html
@@ -243,7 +243,6 @@
             <button type="submit" class="submit-button">VALIDER</button>
         </form>
     </div>
-
-
+<script src="index.js"></script>
 </body>
 </html>
