quiz functional with display of correct / incorrect answers a,nd score

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>General Knowledge <span>Quiz</span></h1>
-    <div class="main container">
+    <div>
         <form class="form">
             <div class="question-div">
                 <h2 class="question">
@@ -240,8 +240,11 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" class="submit-button">VALIDER</button>
+            <button type="submit" class="submit-button display-block">SUBMIT</button>
         </form>
+        <div class="results-div display-none">
+            <h2 class="align-center">Results</h2>
+        </div>
     </div>
 <script src="index.js"></script>
 </body>
